@@ -57,6 +57,7 @@ private:
     void OnPaste(wxCommandEvent& event);
     void OnClear(wxCommandEvent& event);
     void OnFind(wxCommandEvent& event);
+    void OnReplace(wxCommandEvent& event);
     void OnUndo(wxCommandEvent& event);
     void OnRedo(wxCommandEvent& event);
     void OnSaveHistory(wxCommandEvent& event);
