@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2005-11-09 DP  1.4    Add search/replace to the query editor
     <li>2005-11-09 AP  1.4.1  Fix param name quoting for procedures (r: Alex Tyagloff)
     <li>2005-11-04 AP  1.4.0  Fix SET role (r:Florian Pflug), fix role help
     <li>2005-11-04 DP  1.4.0  Fix role inheritance option when creating roles, per Mike Allen
